crates/lang/macro/tests/ui/fail/S-05-storage-as-event.stderr
error: encountered conflicting pro! attribute argument
 --> $DIR/S-05-storage-as-event.rs:6:11
  |
6 |     #[pro(event)] // We cannot have #[pro(event)] if we already have #[pro(storage)]
  |           ^^^^^
